packages/forge-dsl/fixtures/errors/e29-bad-interpolation.fable
// expect: FORGE308
-> go

=== go ===
The count is {+}.
-> END
